trying to fix ng and cors